--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "dev": "nodemon ./src/bin/server.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "consign": "^0.1.6",
-    "express": "^4.17.1"
+    "csurf": "^1.11.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.6.1",
+    "helmet": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv-safe": "^8.2.0",
