--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./src/bin/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "consign": "^0.1.6",
     "csurf": "^1.11.0",
