--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "sequelize-paginate": "^1.1.6"
   },
   "devDependencies": {
     "dotenv-safe": "^8.2.0",
