--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bull": "^3.20.0",
+    "bull-board": "^1.0.1",
     "compression": "^1.7.4",
     "consign": "^0.1.6",
     "csurf": "^1.11.0",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.16",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "sequelize-paginate": "^1.1.6"
